Fix broken css ref for #content

--- a/public/styles.css
+++ b/public/styles.css
@@ -79,7 +79,7 @@ td.logo {
   border-right: 2px solid #AF7A30;
 }
 
-#content
+#content {
   padding: 1em;
   background-color: #000022;
 }
